Meta discription added

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Mercury Paints - Home page</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+
+  <meta content="Mercury Paints official website. We specialise in the manufacturing of all kinds of quality paints.
+  Call/Message us on +2348062803974 or visit 2, GNL Water Road. Igbera Camp, Auchi. Edo State-Nigeria" name="description">
+  <meta content="Mercury Paints, Paint production,  Paints, bonnarvoo" name="keywords">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.jpg" rel="icon">
